refactor: 코드 품질 및 확장성 개선
1. Controller 계층 개선
   - UserController: UserRepository 의존성 제거, Service로 이관
   - CommentController: 조립 로직 Service로 이동, Repository 의존성 제거
   - FeedController: SliceResponse 제네릭 DTO 적용

2. 설정 관리 개선
   - WebConfig: addCorsMappings 제거 (SecurityConfig로 일원화)
   - CorsProperties: @ConfigurationProperties로 타입 안전한 CORS 설정
   - AsyncProperties: 스레드 풀 설정 yml로 외부화
   - Resilience4jConfig: Spring Boot 자동설정 활용으로 간소화

3. 새 기능 추가
   - SliceResponse<T>: 페이징 응답용 제네릭 DTO
   - CacheConfig: Redis 캐싱 설정 (랭킹 조회용)
   - S3OrphanImageCleanupScheduler: DB에 없는 S3 이미지 자동 정리
   - FeedCountSyncScheduler: 피드 좋아요/댓글 카운트 동기화

4. 기타 개선
   - SocialProvider enum 추가 (타입 안전한 소셜 로그인 처리)
   - UserService @Cacheable 적용 (랭킹 캐싱)
   - FeedRepository Window Function 쿼리 추가